--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "private": true,
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "build": "lerna run build --scope=netero-ui"
+  },
   "workspaces": {
     "packages": [
       "packages/*"
