added a start script

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "lerna run build --scope=netero-ui"
+    "build": "lerna run build --scope=netero-ui",
+    "start": "lerna run start --scope=netero-app"
   },
   "workspaces": {
     "packages": [
