--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.8.1",
+    "netero-ui": "0.1.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts-ts": "2.17.0",
-    "netero-ui": "0.1.0"
+    "react-scripts-ts": "2.17.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -19,6 +20,8 @@
     "@types/node": "^10.7.1",
     "@types/react": "^16.4.11",
     "@types/react-dom": "^16.0.7",
+    "react-live": "^1.11.0",
+    "react-router-dom": "^4.3.1",
     "typescript": "^3.0.1"
   }
 }
