--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^10.7.1",
     "@types/react": "^16.4.11",
     "@types/react-dom": "^16.0.7",
+    "@types/react-router-dom": "^4.3.0",
     "react-live": "^1.11.0",
     "react-router-dom": "^4.3.1",
     "typescript": "^3.0.1"
