--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -2,8 +2,10 @@
   "name": "netero-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://datdevboi.github.io/",
   "dependencies": {
     "antd": "^3.8.1",
+    "gh-pages": "^1.2.0",
     "netero-ui": "0.1.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
