--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -2,7 +2,7 @@
   "name": "netero-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://datdevboi.github.io/",
+  "homepage": "http://datdevboi.github.io/netero-ui",
   "dependencies": {
     "antd": "^3.8.1",
     "gh-pages": "^1.2.0",
