Made a script to run the test and also added ts-jest to our nohoist option

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "gen:data": "ts-node-dev --respawn ./scripts/genComponentData.ts",
     "build:netero-ui": "lerna run build --scope=netero-ui && yarn install",
     "build:app": "lerna run build",
-    "start": "lerna run start --scope=netero-app",
-    "dev": "nodemon build --watch packages/netero-ui/src/components"
+    "dev": "nodemon build --watch packages/netero-ui/src/components",
+    "test": "lerna run test scope=netero-ui"
   },
   "workspaces": {
     "packages": [
@@ -15,7 +15,9 @@
     ],
     "nohoist": [
       "**/rimraf",
-      "**/rimraf/**"
+      "**/rimraf/**",
+      "**/ts-jest",
+      "**/ts-jest/**"
     ]
   },
   "devDependencies": {
