--- a/packages/netero-ui/package.json
+++ b/packages/netero-ui/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "rimraf lib && tsc",
-    "test": "jest"
+    "test": "jest",
+    "build:netlify": "tsc"
   },
   "devDependencies": {
     "@types/react": "^16.4.11",
