--- a/packages/netero-ui/package.json
+++ b/packages/netero-ui/package.json
@@ -6,13 +6,21 @@
   "scripts": {
     "build": "rimraf lib && tsc",
     "test": "jest",
-    "build:netlify": "tsc"
+    "build:netlify": "tsc",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
     "@types/react": "^16.4.11",
     "react-testing-library": "^5.0.1",
     "rimraf": "^2.6.2",
-    "ts-jest": "^23.1.4"
+    "ts-jest": "^23.1.4",
+    "@storybook/react": "^3.4.11",
+    "@storybook/addon-actions": "^3.4.11",
+    "@storybook/addon-links": "^3.4.11",
+    "@storybook/addons": "^3.4.11",
+    "babel-core": "^6.26.3",
+    "babel-runtime": "^6.26.0"
   },
   "dependencies": {
     "polished": "^1.9.3",
