added awsome-typescript-loader on the nohoist options in root package.json

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
       "**/rimraf",
       "**/rimraf/**",
       "**/ts-jest",
-      "**/ts-jest/**"
+      "**/ts-jest/**",
+      "**/awesome-typescript-loader",
+      "**/awesome-typescript-loader/**"
     ]
   },
   "devDependencies": {
