--- a/packages/netero-ui/package.json
+++ b/packages/netero-ui/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.4.11",
+    "@storybook/addon-info": "^3.4.11",
     "@storybook/addon-links": "^3.4.11",
     "@storybook/addons": "^3.4.11",
     "@storybook/react": "^3.4.11",
@@ -19,6 +20,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
+    "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "react-testing-library": "^5.0.1",
     "rimraf": "^2.6.2",
     "ts-jest": "^23.1.4"
