--- a/packages/netero-ui/package.json
+++ b/packages/netero-ui/package.json
@@ -15,8 +15,11 @@
     "@storybook/addon-info": "^3.4.11",
     "@storybook/addon-links": "^3.4.11",
     "@storybook/addons": "^3.4.11",
-    "@storybook/react": "^3.4.11",
+    "@storybook/react": "4.0.0-alpha.3",
     "@types/react": "^16.4.11",
+    "@types/storybook__addon-actions": "^3.4.1",
+    "@types/storybook__addon-links": "^3.3.2",
+    "@types/storybook__react": "^3.0.9",
     "awesome-typescript-loader": "^5.2.1",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
