--- a/packages/netero-ui/tsconfig.json
+++ b/packages/netero-ui/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "exclude": ["**/*.stories.tsx", "**/*.test.tsx"],
+  "exclude": ["src/stories", "**/*.test.tsx"],
   "compilerOptions": {
     /* Basic Options */
     "target": "es5" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */,
