--- a/packages/netero-ui/package.json
+++ b/packages/netero-ui/package.json
@@ -18,6 +18,7 @@
     "@storybook/react": "4.0.0-alpha.3",
     "@types/react": "^16.4.11",
     "@types/storybook__addon-actions": "^3.4.1",
+    "@types/storybook__addon-info": "^3.4.2",
     "@types/storybook__addon-links": "^3.3.2",
     "@types/storybook__react": "^3.0.9",
     "awesome-typescript-loader": "^5.2.1",
