--- a/packages/netero-ui/package.json
+++ b/packages/netero-ui/package.json
@@ -25,6 +25,7 @@
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
+    "react-live": "^1.11.0",
     "react-testing-library": "^5.0.1",
     "rimraf": "^2.6.2",
     "ts-jest": "^23.1.4"
