Added chokidar and it's types

--- a/packages/netero-ui/package.json
+++ b/packages/netero-ui/package.json
@@ -16,6 +16,7 @@
     "@storybook/addon-links": "^3.4.11",
     "@storybook/addons": "^3.4.11",
     "@storybook/react": "4.0.0-alpha.3",
+    "@types/chokidar": "^1.7.5",
     "@types/react": "^16.4.11",
     "@types/storybook__addon-actions": "^3.4.1",
     "@types/storybook__addon-info": "^3.4.2",
@@ -24,6 +25,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
+    "chokidar": "^2.0.4",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "react-live": "^1.11.0",
     "react-testing-library": "^5.0.1",
