added prettier to format code for each component

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "gen:data": "ts-node-dev ./scripts/genComponentData.ts",
+    "gen:data": "ts-node-dev --respawn ./scripts/genComponentData.ts",
     "build:netero-ui": "lerna run build --scope=netero-ui && yarn install",
     "build:app": "lerna run build:netlify",
     "dev": "nodemon build --watch packages/netero-ui/src/components",
@@ -27,6 +27,7 @@
     "chalk": "^2.4.1",
     "lerna": "^2.11.0",
     "nodemon": "^1.18.3",
+    "prettier": "^1.14.3",
     "react-docgen-typescript": "^1.6.3",
     "ts-node-dev": "^1.0.0-pre.26"
   },
