--- a/packages/netero-ui/package.json
+++ b/packages/netero-ui/package.json
@@ -22,6 +22,7 @@
     "@types/storybook__addon-info": "^3.4.2",
     "@types/storybook__addon-links": "^3.3.2",
     "@types/storybook__react": "^3.0.9",
+    "@types/styled-components": "^4.0.3",
     "awesome-typescript-loader": "^5.2.1",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
@@ -35,7 +36,7 @@
   "dependencies": {
     "polished": "^1.9.3",
     "react": "^16.4.2",
-    "styled-components": "^3.4.2",
+    "styled-components": "4.0.2",
     "typescript": "^3.0.1"
   }
 }
