--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     ]
   },
   "devDependencies": {
+    "@types/prettier": "^1.13.2",
     "chalk": "^2.4.1",
     "lerna": "^2.11.0",
     "nodemon": "^1.18.3",
